--- a/public/tutorial/index.html
+++ b/public/tutorial/index.html
@@ -38,6 +38,10 @@
   
   
   <li>
+    <a href="/tutorial/quarto-exercises/">10 - Quarto exercises</a>
+  </li>
+  
+  <li>
     <a href="/tutorial/installation/">1.1 - Installation of the necessary software</a>
   </li>
   
@@ -71,10 +75,6 @@
   
   <li>
     <a href="/tutorial/importing-exporting-data/">7.2 - Importing and exporting data using data.table</a>
-  </li>
-  
-  <li>
-    <a href="/tutorial/rmarkdown-exercises/">9 - R-Markdown exercises</a>
   </li>
   
   <li>
