--- a/public/tutorial/quarto-exercises/index.html
+++ b/public/tutorial/quarto-exercises/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>9 - R-Markdown exercises | Data Science (FaSe22)</title>
+    <title>10 - Quarto exercises | Data Science (FaSe22)</title>
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/fonts.css" />
     
@@ -28,19 +28,19 @@
     </nav>
 
 <div class="article-meta">
-<h1><span class="title">9 - R-Markdown exercises</span></h1>
+<h1><span class="title">10 - Quarto exercises</span></h1>
 <h2 class="author">Claudius Gräbner-Radkowitsch</h2>
-<h2 class="date">2022/09/06</h2>
+<h2 class="date">2022/10/26</h2>
 </div>
 
 <main>
-<p>Create a new R-Markdown file where you set the title, date, and the author
+<p>Create a new Quarto document where you set the title, date, and the author
 explicitly.
 Write a sample text that comprises&hellip;</p>
 <ul>
 <li>&hellip;at least one level 1 heading</li>
 <li>&hellip;at least two level 2 headings</li>
-<li>&hellip;a setup chunk that specifies that R code remains hidden by default</li>
+<li>&hellip;a YAML part that specifies that R code remains hidden by default</li>
 <li>&hellip;one R chunk where both the output and the code is printed in the final document</li>
 <li>&hellip;one R chunk that produces a simply ggplot object and where the code producing the plot is hidden</li>
 </ul>
@@ -48,7 +48,7 @@ Write a sample text that comprises&hellip;</p>
 <ol>
 <li>
 <p>Knit the document to <code>html</code> with a floating table of contents and a
-<a href="https://bootswatch.com/">bootswatch theme</a>.</p>
+<a href="https://quarto.org/docs/output-formats/html-themes.html">special theme</a>.</p>
 </li>
 <li>
 <p>Make the document available via
@@ -61,8 +61,8 @@ and add the possibility to download the underlying Rmd file.
 </li>
 </ol>
 <p>A sample solution for the Rmd file can be found
-<a href="https://gist.github.com/graebnerc/a10d086e45f624882ed1b52563569fb2">here</a>
-(the Netlify version is <a href="https://markdown-ex-solution.netlify.app/">here</a>).</p>
+<a href="https://gist.github.com/graebnerc/f42962b9ecbf9d7a7e6dc5593be691bd">here</a>
+(the Netlify version is <a href="https://quarto-ex-solution.netlify.app/">here</a>).</p>
 
 </main>
 
