Fix minor issue with wrangling lecture notes

--- a/public/material/index.html
+++ b/public/material/index.html
@@ -108,7 +108,7 @@
 <td style="text-align:left">Nov 2, 2022</td>
 <td style="text-align:left">Quarto/R Markdown</td>
 <td style="text-align:center"><a href="slides/T10-Quarto.pdf">Slides</a></td>
-<td style="text-align:center"><code>RMarkdown</code></td>
+<td style="text-align:center"><code>Quarto</code></td>
 </tr>
 <tr>
 <td style="text-align:center"><a href="#s11">11</a></td>
@@ -269,14 +269,17 @@ All ready, just comment out
 <li><a href="https://bookdown.org/yihui/rmarkdown-cookbook/">The R Markdown Cookbook</a></li>
 </ul>
 <p>The practical exercise for this topic can be found
-<a href="/tutorial/rmarkdown-exercises/">here</a>.</p>
+<a href="/tutorial/quarto-exercises/">here</a>.</p>
 <h2 id="s11">Session 11: Recap and practice</h2>
 <p>TBA</p>
 <h2 id="s13">Sessions 12 &amp; 13: Simple linear regression</h2>
 <ul>
 <li><a href="http://guessthecorrelation.com/">Guess the correlation browser game</a></li>
-<li><a href="https://gist.github.com/graebnerc/d61da231fbc479434476fab221157536">Lecture scripts from the session and exercise solutions</a></li>
 </ul>
+<!--
+Still the old ones!
+- [Lecture scripts from the session and exercise solutions](https://gist.github.com/graebnerc/d61da231fbc479434476fab221157536)
+-->
 <h3 id="mandatory-readings-8">Mandatory readings</h3>
 <ul>
 <li><a href="https://moderndive.com/5-regression.html">Statistical Inference via Data Science, Chapter 5: Basic regression</a></li>
