add mlr exercises

--- a/public/material/index.html
+++ b/public/material/index.html
@@ -98,45 +98,45 @@
 </tr>
 <tr>
 <td style="text-align:center"><a href="#s8">8 &amp; 9</a></td>
-<td style="text-align:left">Oct 26, 2022</td>
+<td style="text-align:left">Oct 26 &amp; Nov 3, 2022</td>
 <td style="text-align:left">Data wrangling</td>
 <td style="text-align:center"><a href="slides/T8-DataWrangling.pdf">Slides</a></td>
 <td style="text-align:center"><code>Wrangling1</code></td>
 </tr>
 <tr>
 <td style="text-align:center"><a href="#s10">10</a></td>
-<td style="text-align:left">Nov 2, 2022</td>
+<td style="text-align:left">Nov 10, 2022</td>
 <td style="text-align:left">Quarto/R Markdown</td>
 <td style="text-align:center"><a href="slides/T10-Quarto.pdf">Slides</a></td>
 <td style="text-align:center"><code>Quarto</code></td>
 </tr>
 <tr>
 <td style="text-align:center"><a href="#s11">11</a></td>
-<td style="text-align:left">Nov 3, 2022</td>
+<td style="text-align:left">Nov 16, 2022</td>
 <td style="text-align:left">Recap &amp; practice</td>
-<td style="text-align:center">Slides</td>
+<td style="text-align:center">NA</td>
 <td></td>
 </tr>
 <tr>
-<td style="text-align:center"><a href="#s12">12 &amp; 13</a>, 12</td>
-<td style="text-align:left">Nov 16-17, 2022</td>
+<td style="text-align:center"><a href="#s12">12</a></td>
+<td style="text-align:left">Nov 23, 2022</td>
+<td style="text-align:left">Recap of data wrangling</td>
+<td style="text-align:center"><a href="slides/T12-RecapWrangling.pdf">Slides</a></td>
+<td></td>
+</tr>
+<tr>
+<td style="text-align:center"><a href="#s13">13 &amp; 14</a></td>
+<td style="text-align:left">Nov 24 &amp; 30, 2022</td>
 <td style="text-align:left">Simple linear Regression I and II</td>
-<td style="text-align:center"><a href="slides/T11T12-SimpleLinearRegression.pdf">Slides</a></td>
+<td style="text-align:center"><a href="slides/T13T14-SimpleLinearRegression.pdf">Slides</a></td>
 <td style="text-align:center"><code>LinearRegression1</code></td>
 </tr>
 <tr>
-<td style="text-align:center"><a href="#s14">14 &amp; 15</a>, 14</td>
-<td style="text-align:left">Nov 24 &amp; 30, 2022</td>
+<td style="text-align:center"><a href="#s15">15 &amp; 16</a></td>
+<td style="text-align:left">Dec 1 &amp; Dec 7, 2022</td>
 <td style="text-align:left">Multiple linear Regression I and II</td>
-<td style="text-align:center"><a href="slides/T13T14-MultipleLinearRegression.pdf">Slides</a></td>
+<td style="text-align:center"><a href="slides/T15T16-MultipleLinearRegression.pdf">Slides</a></td>
 <td style="text-align:center"><code>LinearRegression2</code></td>
-</tr>
-<tr>
-<td style="text-align:center"><a href="#s16">16</a></td>
-<td style="text-align:left">Dec 1, 2022</td>
-<td style="text-align:left">Regression diagnostics and sampling</td>
-<td style="text-align:center">Slides</td>
-<td></td>
 </tr>
 <tr>
 <td style="text-align:center"><a href="#s17">17</a></td>
@@ -147,6 +147,9 @@
 </tr>
 </tbody>
 </table>
+<!--
+|   [17](#s17)  | Dec 7, 2022| Regression diagnostics and sampling | Slides |
+-->
 <p>To start the respective exercises execute the following code, substituting
 <code>ExCode</code> with the code given in the column &lsquo;Exercise code&rsquo; in the table above:</p>
 <pre><code>learnr::run_tutorial(
@@ -247,12 +250,9 @@ For more information on how to install and use the exercises, see the respective
 <h2 id="s10">Session 10: Quarto/R Markdown</h2>
 <ul>
 <li><a href="files/DesasterMarkdown.pdf">DesasterMarkdown.pdf</a></li>
+<li><a href="files/NicerMarkdown.pdf">NicerMarkdown.pdf</a></li>
+<li><a href="https://gist.github.com/graebnerc/44b82add84b1d5cb89d28574ae89ed02">Code for the markdown desaster and a possible solution</a></li>
 </ul>
-<!--
-All ready, just comment out
-- [NicerMarkdown.pdf](files/NicerMarkdown.pdf)
-- [Code for the markdown desaster and a possible solution](https://gist.github.com/graebnerc/44b82add84b1d5cb89d28574ae89ed02)
--->
 <h3 id="mandatory-readings-7">Mandatory readings</h3>
 <ul>
 <li><a href="https://commonmark.org/help/tutorial/">The CommonMark markdown tutorial</a></li>
@@ -270,31 +270,32 @@ All ready, just comment out
 </ul>
 <p>The practical exercise for this topic can be found
 <a href="/tutorial/quarto-exercises/">here</a>.</p>
-<h2 id="s11">Session 11: Recap and practice</h2>
-<p>TBA</p>
-<h2 id="s13">Sessions 12 &amp; 13: Simple linear regression</h2>
+<h2 id="s12">Session 12: Recap of data wrangling</h2>
 <ul>
+<li><a href="files/T12-ExampleData.zip">Example data</a></li>
+<li><a href="https://gist.github.com/graebnerc/9291201a7d4a3ba7496e75b096453cf4">Solutions to the exercises</a></li>
+</ul>
+<h2 id="s13">Sessions 13 &amp; 14: Simple linear regression</h2>
+<ul>
+<li><a href="https://gist.github.com/graebnerc/207117d4a87025a3c64d27d8358c275b">Exercise solutions</a></li>
 <li><a href="http://guessthecorrelation.com/">Guess the correlation browser game</a></li>
 </ul>
-<!--
-Still the old ones!
-- [Lecture scripts from the session and exercise solutions](https://gist.github.com/graebnerc/d61da231fbc479434476fab221157536)
--->
 <h3 id="mandatory-readings-8">Mandatory readings</h3>
 <ul>
 <li><a href="https://moderndive.com/5-regression.html">Statistical Inference via Data Science, Chapter 5: Basic regression</a></li>
 </ul>
-<h2 id="s14">Sessions 14 &amp; 15: Multiple linear regression</h2>
-<!--
-- [Lecture notes and solutions to exercises](https://gist.github.com/graebnerc/4a9e5bb95459d8ada31f43141976efe8)
--->
+<h2 id="s15">Sessions 15 &amp; 16: Multiple linear regression</h2>
+<ul>
+<li><a href="/tutorial/multiple-regression/">Exercises</a></li>
+</ul>
 <h3 id="mandatory-readings-9">Mandatory readings</h3>
 <ul>
 <li><a href="https://moderndive.com/6-multiple-regression.html">Statistical Inference via Data Science, Chapter 6: Multiple regression</a></li>
 </ul>
-<h2 id="s16">Sessions 16: Regression diagnostics and sampling</h2>
-<p>TBA</p>
 <!--
+## Sessions 17: Regression diagnostics and sampling {#s16} 
+
+TBA
 - [Slides](slides/T14-SamplingTheory.pdf)
 - [Lecture scripts from the session and exercise solutions](https://gist.github.com/graebnerc/822ddd3e0d316aae9dda7b5afbe11685)
 
