--- a/public/tutorial/index.html
+++ b/public/tutorial/index.html
@@ -81,6 +81,10 @@
     <a href="/tutorial/mcs/">Monte Carlo Simulations in R</a>
   </li>
   
+  <li>
+    <a href="/tutorial/multiple-regression/">Exercises on multiple linear regression</a>
+  </li>
+  
 </ul>
 
   <footer>
