Add reference to Quarto in installation

--- a/public/material/index.html
+++ b/public/material/index.html
@@ -97,7 +97,9 @@ For more information on how to install and use the exercises, see the respective
 <li><a href="/tutorial/using-exercises/">Tutorial: doing exercises</a></li>
 </ul>
 <h2 id="s2">Session 2: Basics of R and R-Studio</h2>
-<p><a href="https://gist.github.com/graebnerc/8569172d758ea2a4c5f9305dc3ce9966">Lecture notes and exercise solutions</a></p>
+<!--
+[Lecture notes and exercise solutions](https://gist.github.com/graebnerc/8569172d758ea2a4c5f9305dc3ce9966)
+--->
 <h3 id="mandatory-readings-1">Mandatory readings</h3>
 <ul>
 <li><a href="https://r4ds.had.co.nz/workflow-basics.html">R for Data Science, Chapter 4: Workflow - basics</a></li>
