--- a/content/tutorial/installation/pubdir/onlinecontent.html
+++ b/content/tutorial/installation/pubdir/onlinecontent.html
@@ -350,6 +350,7 @@ services we will be using - and why</a></li>
 <li><a href="#update-r" id="toc-update-r"><span class="toc-section-number">3.2</span> Update R</a></li>
 <li><a href="#r-studio" id="toc-r-studio"><span class="toc-section-number">3.3</span> R-Studio</a></li>
 <li><a href="#git" id="toc-git"><span class="toc-section-number">3.4</span> Git</a></li>
+<li><a href="#install-quarto" id="toc-install-quarto"><span class="toc-section-number">3.5</span> Install Quarto</a></li>
 </ul></li>
 <li><a href="#register-for-the-necessary-services" id="toc-register-for-the-necessary-services"><span class="toc-section-number">4</span> Register for the necessary
 services</a>
@@ -586,6 +587,14 @@ name of the relevant package is <code>git-all</code>, so on Ubuntu, for
 instance, you would install Git via
 <code>sudo apt install git-all</code>.</p>
 </div>
+</div>
+<div id="install-quarto" class="section level2" number="3.5">
+<h2><span class="header-section-number">3.5</span> Install Quarto</h2>
+<p>Quarto allows you to write text and R code within one document. This
+is very useful in many instances, and allows you to create a wide
+variety of nicely looking and practically appealing outputs, including
+apps, websites, statistical reports, and much more. To install Quarto
+just follow the instructions from <a href="https://quarto.org/docs/get-started/">this webpage</a>.</p>
 </div>
 </div>
 <div id="register-for-the-necessary-services" class="section level1" number="4">
