--- a/public/material/index.html
+++ b/public/material/index.html
@@ -61,11 +61,23 @@
 <td style="text-align:center"><a href="slides/T2-Basics-Functions.pdf">Slides</a></td>
 <td style="text-align:center"><code>Basics</code></td>
 </tr>
+<tr>
+<td style="text-align:center"><a href="#s3">3</a></td>
+<td style="text-align:left">Sep 29, 2022</td>
+<td style="text-align:left">Basic objects</td>
+<td style="text-align:center"><a href="slides/T3-Objects.pdf">Slides</a></td>
+<td style="text-align:center"><code>ObjectTypes1</code></td>
+</tr>
+<tr>
+<td style="text-align:center"><a href="#s4">4</a></td>
+<td style="text-align:left">Oct 5, 2022</td>
+<td style="text-align:left">Advanced objects</td>
+<td style="text-align:center"><a href="slides/T4-AdvObjects.pdf">Slides</a></td>
+<td style="text-align:center"><code>ObjectTypes2</code></td>
+</tr>
 </tbody>
 </table>
 <!--
-|   [3](#s3)  | Sep 29, 2022| Basic objects | [Slides](slides/T3-Objects.pdf) | `ObjectTypes1` |
-|   [4](#s4)  | Oct 5, 2022| Advanced objects | [Slides](slides/T4-AdvObjects.pdf) | `ObjectTypes2` |
 |   [5](#s5)  | Oct 6, 2022| Recap & practice| [Slides](slides/T5-Exercises.pdf)| 
 |   [6](#s6)  | Oct 12, 2022| Visualization | [Slides](slides/T6-Visualization.pdf)| `Visualization1` |
 |   [7](#s7)  | Oct 13, 2022| Project management and data import | [Slides](slides/T7-ProjectSetup.pdf) | `ProjectOrga` | 
@@ -90,6 +102,9 @@ For more information on how to install and use the exercises, see the respective
 <a href="/tutorial/using-exercises/">tutorial on exercises</a>.</p>
 <h1 id="readings-tutorials-and-further-material">Readings, tutorials, and further material</h1>
 <h2 id="s1">Session 1: Introduction and installation</h2>
+<ul>
+<li>Lecture videos available via Moodle</li>
+</ul>
 <h3 id="mandatory-readings">Mandatory readings</h3>
 <ul>
 <li><a href="/tutorial/installation/">Tutorial: installing basic software</a></li>
@@ -97,9 +112,10 @@ For more information on how to install and use the exercises, see the respective
 <li><a href="/tutorial/using-exercises/">Tutorial: doing exercises</a></li>
 </ul>
 <h2 id="s2">Session 2: Basics of R and R-Studio</h2>
-<!--
-[Lecture notes and exercise solutions](https://gist.github.com/graebnerc/8569172d758ea2a4c5f9305dc3ce9966)
---->
+<ul>
+<li><a href="https://gist.github.com/graebnerc/2682bb2d872eb613bdea70f6f9f974b9">Lecture notes and exercise solutions</a></li>
+<li>Lecture videos available via Moodle</li>
+</ul>
 <h3 id="mandatory-readings-1">Mandatory readings</h3>
 <ul>
 <li><a href="https://r4ds.had.co.nz/workflow-basics.html">R for Data Science, Chapter 4: Workflow - basics</a></li>
@@ -110,17 +126,16 @@ For more information on how to install and use the exercises, see the respective
 <ul>
 <li><a href="https://raw.githubusercontent.com/rstudio/cheatsheets/main/rstudio-ide.pdf">R Studio IDE cheat sheet</a></li>
 </ul>
+<h2 id="s3">Session 3: Basic object types</h2>
+<ul>
+<li>Lecture videos available via Moodle</li>
+<li><a href="/tutorial/obj-types-exercises/">Exercises for class</a></li>
+</ul>
+<h3 id="mandatory-readings-2">Mandatory readings</h3>
+<ul>
+<li><a href="/tutorial/object-types-vec/">Tutorial: Vectors</a></li>
+</ul>
 <!--
-## Session 3: Basic object types {#s3}
-
-- [Lecture videos](https://youtube.com/playlist?list=PLZDawQMrG1RLqzcegYiLnK4vQnSbqjf1K)
-- [Lecture notes and solutions to intermediate exercises](https://gist.github.com/graebnerc/8569172d758ea2a4c5f9305dc3ce9966)
-
-### Mandatory readings
-
-- [Tutorial: Vectors](/tutorial/object-types-vec/)
-
-
 ## Session 4: Advanced object types {#s4}
 
 - [Session notes](https://gist.github.com/graebnerc/53a88869a8d178efea90fff92ab272f5)
