--- a/public/tutorial/index.html
+++ b/public/tutorial/index.html
@@ -38,6 +38,10 @@
   
   
   <li>
+    <a href="/tutorial/obj-types-exercises/">Basic object types: exercises</a>
+  </li>
+  
+  <li>
     <a href="/tutorial/installation/">1.1 - Installation of the necessary software</a>
   </li>
   
