--- a/public/tutorial/obj-types-exercises/index.html
+++ b/public/tutorial/obj-types-exercises/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Categories | Data Science (SpSe23)</title>
+    <title>Basic object types: exercises | Data Science (SpSe23)</title>
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/fonts.css" />
     
@@ -27,28 +27,17 @@
     <hr/>
     </nav>
 
+<div class="article-meta">
+<h1><span class="title">Basic object types: exercises</span></h1>
+<h2 class="author">Claudius Gräbner-Radkowitsch</h2>
+<h2 class="date">2023/03/29</h2>
+</div>
 
-<h1>Categories</h1>
+<main>
+<p>Download this post as <a href="pubdir/pdfcontent.pdf">PDF</a></p>
+<p>Read this post as <a href="pubdir/onlinecontent.html">HTML</a></p>
 
-<ul class="terms">
-  
-  <li>
-    <a href="/categories/exercises/">exercises</a> (3)
-  </li>
-  
-  <li>
-    <a href="/categories/notes/">notes</a> (2)
-  </li>
-  
-  <li>
-    <a href="/categories/setup/">setup</a> (3)
-  </li>
-  
-  <li>
-    <a href="/categories/tutorial/">tutorial</a> (10)
-  </li>
-  
-</ul>
+</main>
 
   <footer>
   <script defer src="//yihui.org/js/math-code.js"></script>
