--- a/content/tutorial/obj-types-exercises/pubdir/onlinecontent.html
+++ b/content/tutorial/obj-types-exercises/pubdir/onlinecontent.html
@@ -391,7 +391,8 @@ between 2 and 4 (step size: <code>0.5</code>)</li>
 <code>a1</code> to <code>g7</code> (hint: use the pre-defined vector
 <code>letters</code> and the function <code>paste()</code>)</li>
 </ul>
-<p>Link to the solutions</p>
+<p><a href="https://gist.github.com/graebnerc/bda112996a91b9fddee366eb5e713d91">Link
+to the solutions</a></p>
 </div>
 
 
