--- a/public/material/index.html
+++ b/public/material/index.html
@@ -130,24 +130,22 @@ For more information on how to install and use the exercises, see the respective
 <ul>
 <li>Lecture videos available via Moodle</li>
 <li><a href="/tutorial/obj-types-exercises/">Exercises for class</a></li>
+<li><a href="https://gist.github.com/graebnerc/bda112996a91b9fddee366eb5e713d91">Solutions to the exercises</a></li>
 </ul>
 <h3 id="mandatory-readings-2">Mandatory readings</h3>
 <ul>
 <li><a href="/tutorial/object-types-vec/">Tutorial: Vectors</a></li>
 </ul>
+<h2 id="s4">Session 4: Advanced object types</h2>
+<ul>
+<li><a href="https://gist.github.com/graebnerc/1a2d538cc5a0f250448cd58bbc59b054">Session notes</a></li>
+</ul>
+<h3 id="mandatory-readings-3">Mandatory readings</h3>
+<ul>
+<li><a href="/tutorial/object-types-adv/">Tutorial: Factors and data frames</a></li>
+<li><a href="https://r4ds.had.co.nz/tibbles.html">R for Data Science, Chapter 10: Tibbles</a></li>
+</ul>
 <!--
-## Session 4: Advanced object types {#s4}
-
-- [Session notes](https://gist.github.com/graebnerc/53a88869a8d178efea90fff92ab272f5)
-<!--
-- [Session notes](https://gist.github.com/graebnerc/bf8b1b60084377744881b392f0c9534e)
-
-### Mandatory readings
-
-- [Tutorial: Factors and data frames](/tutorial/object-types-adv/)
-- [R for Data Science, Chapter 10: Tibbles](https://r4ds.had.co.nz/tibbles.html)
-
-
 ## Session 5: Recap and practice {#s5}
 
 - [Exercises](slides/T5-Exercises.pdf)
