--- a/public/tutorial/installation/pubdir/onlinecontent.html
+++ b/public/tutorial/installation/pubdir/onlinecontent.html
@@ -530,7 +530,7 @@ available to them: the <a href="https://github.com/talgalili/installr">installr 
 does not require you to re-install your packages. Just type the
 following code into your R console:<a href="#fn2" class="footnote-ref" id="fnref2"><sup>2</sup></a></p>
 <pre><code>install.packages(&quot;installr&quot;)
-ibrary(installr)
+library(installr)
 updateR(TRUE)</code></pre>
 <p>For more information see <a href="https://github.com/talgalili/installr">the package
 website</a>.</p>
