--- a/public/tutorial/first-steps/pubdir/onlinecontent.html
+++ b/public/tutorial/first-steps/pubdir/onlinecontent.html
@@ -756,7 +756,7 @@ earlier package. You see this by calling the objects by name:</p>
 #&gt; {
 #&gt;     UseMethod(&quot;lead&quot;)
 #&gt; }
-#&gt; &lt;bytecode: 0x7f9bd5a58070&gt;
+#&gt; &lt;bytecode: 0x7faaafe82708&gt;
 #&gt; &lt;environment: namespace:plm&gt;</code></pre>
 <p>The last line informs is about the fact that the function was defined
 in the package <code>plm</code>. If we now want to call the function
@@ -772,7 +772,7 @@ in the package <code>plm</code>. If we now want to call the function
 #&gt;     }
 #&gt;     shift(x, n = -n, default = default, order_by = order_by)
 #&gt; }
-#&gt; &lt;bytecode: 0x7f9be6d9f478&gt;
+#&gt; &lt;bytecode: 0x7faa7fa8f050&gt;
 #&gt; &lt;environment: namespace:dplyr&gt;</code></pre>
 <p>This can be very confusing. Thus, I <em>strongly recommend</em> to
 <em>always</em> use <code>::</code> when it comes to masking, no matter
